Fixed text overflow issue in the CSS. Implemente filehandle using File Stream API for chrome and edge browser.

--- a/public/CSS/folderarea.css
+++ b/public/CSS/folderarea.css
@@ -22,6 +22,8 @@ ul#directory li{
 	height:2em;
 	display:grid;
 	overflow:hidden;
+	white-space:nowrap;
+	text-overflow: ellipsis;
 	grid-template-columns: 80% 20%;
 	border-bottom: 1px solid black;
 }
